# c-saw_server

./: .gitignore  CMakeLists.txt  README.md  config.c  config.h  configs.txt  diagram.odg  example.cfg  handle_req.c  handle_req.h  hello  http_req_checks.c  http_req_checks.h  http_req_parser.c  http_req_parser.h  http_res_encoder.c  http_res_encoder.h  http_res_field_builders.c  http_res_field_builders.h  http_res_type.c  http_res_type.cpp  http_res_type.h  http_res_type.hpp  logging.h  main.c  ncurses_main.c  read_args.c  read_args.h  read_config_file.c  read_config_file.h  read_defaults.c  read_defaults.h  return_codes.h  server_config.h  server_config_t.h  server_driver.c  server_driver.h  string_allocation.c  string_allocation.h
backbone/: async_process.c  async_process.h  async_serving_v1.c  async_serving_v1.h  async_serving_v2.c  async_serving_v2.h  async_threading.c  async_threading.h  logging.c  logging.h  serve_request.c  serve_request.h  server_driver.c  server_driver.h
static_html/: 404.html  index.html
tests/: test_http_res_encode.c
